592067:TISSTRT-1620 and TISSTRT-1621 and TISSTRT-1625: Remember me checkbox is not coming in sign up page in responsive view and alignment issue of Remember me checkbox in responsive view and Alignment issue in "Remember me" check box in sign in pop up.

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -70789,3 +70789,26 @@ span#juspayErrorMsg{
 }
 }
 /*STW heading end*/
+/* TISSTRT-1625 start*/
+@media (min-width: 791px){
+	.dropdown.sign-in-dropdown.sign-in.ajaxloginhi label[for='j_RememberMe']{
+	    padding-bottom: 15px;
+	    }
+}
+/* TISSTRT-1625 end */
+/* TISSTRT-1621 start */
+@media (max-width: 980px){
+	.sign-in.tab-view .tabs > li .left form div#checkBox label:before{
+	margin-top: 0px; 
+	}
+}
+/* TISSTRT-1621 end */
+/* TISSTRT-1620 start */
+@media (max-width: 790px){
+	.sign-in.tab-view .tabs > li .left form div#checkBox label{
+	width: 100%;
+    float: none;
+    display: inline-block;
+    }
+}
+/* TISSTRT-1620 end */
